# environmental-data-japan

./: .buildinfo  .gitignore  README.html  README.md  custom.css  genindex.html  index.html  objects.inv  prefecture_weighted_averages.html  pyproject.toml  search.html  search.json  searchindex.js  sitemap.xml
.github/workflows/: deploy.yml
_sources/: README.md  index.md
_static/: custom.css
data/air_pollution/municipalities/: 01101.csv  01102.csv  01103.csv  01104.csv  01105.csv  01106.csv  01107.csv  01108.csv  01109.csv  01202.csv  01203.csv  01204.csv  01205.csv  01206.csv  01207.csv  01208.csv  01210.csv  01213.csv  01217.csv  01224.csv  01226.csv  01231.csv  01233.csv  01235.csv  01236.csv  01332.csv  01333.csv  01334.csv  01424.csv  01571.csv  01575.csv  01578.csv  01581.csv  01584.csv  01585.csv  01586.csv  02201.csv  02202.csv  02203.csv  02204.csv  (+862 more)
data/air_pollution/prefectures/area_weighted/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  40.csv  (+7 more)
data/air_pollution/prefectures/population_weighted/: 01.csv  02.csv  (+45 more)
data/air_pollution_stations/: stations_info.csv
data/air_pollution_stations/doc/: stations_info.csv
data/doc/: README.md
data/population/: municipal_population_stats.csv  population_ts.csv
reports/: _config.yml  _quarto.yml  _toc.yml
site_libs/bootstrap/: bootstrap.min.css
(+3360 files in other folders)
