[tool.poetry]
name = "environmental-data-japan"
version = "0.1.0"
description = ""
authors = ["Alejandro Fontal <alejandro.fontal.92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
plotnine = "^0.9.0"
geopandas = "^0.11.1"
tqdm = "^4.64.0"
deepl = "^1.9.0"
pygeos = "^0.13"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
